feat(export): aperçu + sélection des rubriques pour les rapports Excel
Les rapports (bilan financier, activité, épidémiologie) ont désormais le même
flux que les listes : le bouton Excel mène à un aperçu montrant chaque rubrique
(KPIs, par département, par âge/sexe…) avec sa table et une case à cocher ; on
choisit les rubriques puis on télécharge.

- ReportExportService : sections « keyed » (financialSections/activitySections/
  epidemiologySections) réutilisées pour l'Excel filtré (sectionsXlsx) et l'aperçu
  (preview) ; xxxExcel() délèguent (toutes sections → API ?format=excel inchangée)
- ReportPreviewDto + template export/report-preview.html
- ReportWebController : /reports/{financial,activity,epidemiology}/export/preview
  + param ?sections= sur les endpoints /excel ; boutons de rapport → aperçu
- i18n FR/EN/AR ; tests (aperçu liste les sections + export sections filtrées)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>